# skels

./: .cskconfig  .gitignore  CMakeLists.txt  abc.cpp  abc.hpp  acb.cpp  acb.hpp  install.sh  makefile  uninstall.sh  www.cpp  www.hpp
cbuild/: CMakeCache.txt
new/: .gitignore  CMakeLists.txt  makefile
new/src/: bash_color.hpp  config.hpp  main.cpp  new.cpp  new.hpp  new_test.cpp  new_test.hpp
new2/: .gitignore  CMakeLists.txt  makefile
new2/src/: bash_color.hpp  config.hpp  main.cpp  new2.cpp  new2.hpp  (+2 more)
new3/: .gitignore  CMakeLists.txt  makefile
new3/src/: bash_color.hpp  config.hpp  main.cpp  new3.cpp  new3.hpp  new3_test.cpp  new3_test.hpp
src/: CMakeLists.txt.php  app.cpp.php  app.hpp.php  app_test.cpp.php  app_test.hpp.php  app_test_runner.cpp.php  bash_color.hpp  bash_color.hpp.php  ccsk.sh  class.body.php  class.cpp.php  class.hpp.php  conf.sh  config.hpp  config.hpp.php  csk.sh  cskconfig.php  cskignore.php  cstyle_file_header.php  gitignore.php  gitignore.sh  less_than_overload.php  main.cpp.php  make.class.rule.php  make.flags.php  make.targets.php  makefile.php  noutility.php  skels.cpp  skels.hpp  skels_test.cpp  skels_test.hpp  subclass.cpp.php  subclass.hpp.php  template.cpp.php  template.hpp.php
test/: circle.cpp  circle.hpp  circle2.cpp  circle2.hpp  main.cpp  shape.cpp  shape.hpp  utest_example.cpp
tmpl/: copy_constructor.php  greater_than_overload.php  less_than_equal_overload.php  less_than_overload.php  {class.base.tmpl}.cpp.php  {class.base.tmpl}.hpp.php  {class.base.tmpl}_POC.hpp.php  {class.tmpl}.cpp.php  {class.tmpl}.hpp.php
(+8 files in other folders)
